@@ -825,6 +825,7 @@ int http_request_parse(server *srv, connection *con) {
 												"request-header:\n",
 												con->request.request);
 									}
+									array_insert_unique(con->request.headers, (data_unset *)ds);
 									return 0;
 								}
 
@@ -874,6 +875,7 @@ int http_request_parse(server *srv, connection *con) {
 												"request-header:\n",
 												con->request.request);
 									}
+									array_insert_unique(con->request.headers, (data_unset *)ds);
 									return 0;
 								}
 							} else if (cmp > 0 && 0 == (cmp = buffer_caseless_compare(CONST_BUF_LEN(ds->key), CONST_STR_LEN("Expect")))) {
@@ -911,6 +913,7 @@ int http_request_parse(server *srv, connection *con) {
 												"request-header:\n",
 												con->request.request);
 									}
+									array_insert_unique(con->request.headers, (data_unset *)ds);
 									return 0;
 								}
 							} else if (cmp > 0 && 0 == (cmp = buffer_caseless_compare(CONST_BUF_LEN(ds->key), CONST_STR_LEN("If-Modified-Since")))) {
@@ -936,6 +939,7 @@ int http_request_parse(server *srv, connection *con) {
 												"request-header:\n",
 												con->request.request);
 									}
+									array_insert_unique(con->request.headers, (data_unset *)ds);
 									return 0;
 								}
 							} else if (cmp > 0 && 0 == (cmp = buffer_caseless_compare(CONST_BUF_LEN(ds->key), CONST_STR_LEN("If-None-Match")))) {
@@ -953,6 +957,7 @@ int http_request_parse(server *srv, connection *con) {
 												"request-header:\n",
 												con->request.request);
 									}
+									array_insert_unique(con->request.headers, (data_unset *)ds);
 									return 0;
 								}
 							} else if (cmp > 0 && 0 == (cmp = buffer_caseless_compare(CONST_BUF_LEN(ds->key), CONST_STR_LEN("Range")))) {
@@ -976,6 +981,7 @@ int http_request_parse(server *srv, connection *con) {
 												"request-header:\n",
 												con->request.request);
 									}
+									array_insert_unique(con->request.headers, (data_unset *)ds);
 									return 0;
 								}
 							}
